--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -139,7 +139,7 @@
     
     <style>
     .profile-title {
-        color: #8ab82f;
+        color: #000000;
         font-weight: 700;
         font-size: 2rem;
         margin-bottom: 10px;
@@ -153,7 +153,7 @@
     .title-underline {
         width: 80px;
         height: 4px;
-        background: linear-gradient(90deg, #9ed649, #b2e254);
+        background: linear-gradient(90deg, #000000, #000000);
         border-radius: 2px;
         margin: 0 auto;
     }
